New version: Catlab v0.10.2
UUID: 134e5e36-593f-5add-ad60-77f754baafbe
Repo: https://github.com/AlgebraicJulia/Catlab.jl.git
Tree: c255795d0ac86f518febacc2da043b9ab6e4dee7

Registrator tree SHA: 7c16227cd1dc9bae38e25d6dc6f9c020f8ebca46

--- a/C/Catlab/Versions.toml
+++ b/C/Catlab/Versions.toml
@@ -81,3 +81,6 @@ git-tree-sha1 = "f91f1c736973e6ebba3ef817afa6e835e79bf35a"
 
 ["0.10.1"]
 git-tree-sha1 = "c7a97d7b93994bdb43de1bb1cd40a008e3b8e189"
+
+["0.10.2"]
+git-tree-sha1 = "c255795d0ac86f518febacc2da043b9ab6e4dee7"
