--- a/C/Catlab/Compat.toml
+++ b/C/Catlab/Compat.toml
@@ -28,6 +28,9 @@ TypedTables = "1"
 Reexport = ["0.2", "1"]
 StaticArrays = ["0.12", "1"]
 
+["0.10.2-0"]
+PrettyTables = "0.10-0.11"
+
 ["0.2.3-0"]
 julia = "1"
 
@@ -113,5 +116,5 @@ StructArrays = "0.4"
 ["0.9-0.9.2"]
 PrettyTables = "0.9"
 
-["0.9.3-0"]
+["0.9.3-0.10.1"]
 PrettyTables = "0.10"
