--- a/Registry.toml
+++ b/Registry.toml
@@ -3146,6 +3146,7 @@ a0f608ac-68d0-5108-ad9a-0cdca73324f3 = { name = "AffineInvariantMCMC", path = "A
 a100299e-89d6-11e9-0fa0-2daf497e6a05 = { name = "DataEnvelopmentAnalysis", path = "D/DataEnvelopmentAnalysis" }
 a108434f-6647-5a5d-ae94-d05b8175566d = { name = "GradientBoosting", path = "G/GradientBoosting" }
 a10d1c49-ce27-4219-8d33-6db1a4562965 = { name = "DBInterface", path = "D/DBInterface" }
+a10d98c5-8dcf-4436-9934-9c0732ccefb1 = { name = "SimpleTweaks", path = "S/SimpleTweaks" }
 a110ec8f-48c8-5d59-8f7e-f91bc4cc0c3d = { name = "Temporal", path = "T/Temporal" }
 a1251efa-393a-423f-9d7b-faaecba535dc = { name = "GraphLaplacians", path = "G/GraphLaplacians" }
 a134a8b2-14d6-55f6-9291-3336d3ab0209 = { name = "BlackBoxOptim", path = "B/BlackBoxOptim" }
