New version: Hamburg v0.1.12
UUID: fe294631-7164-4d0f-9497-e1b4dc4640c8
Repo: https://github.com/oem/Hamburg.jl.git
Tree: 16f36023e0b2795dd890b8625b9a94fb56150ba9

Registrator tree SHA: 7c16227cd1dc9bae38e25d6dc6f9c020f8ebca46

--- a/H/Hamburg/Versions.toml
+++ b/H/Hamburg/Versions.toml
@@ -33,3 +33,6 @@ git-tree-sha1 = "5703a80fc31e463592f98816de9b96b519baadb5"
 
 ["0.1.11"]
 git-tree-sha1 = "5ded4570b6c4ccacd5af22d00b28aa14c9e4a38f"
+
+["0.1.12"]
+git-tree-sha1 = "16f36023e0b2795dd890b8625b9a94fb56150ba9"
