New version: EditorsRepo v0.6.6
UUID: 3fa2051c-bcb6-4d65-8a68-41ff86d56437
Repo: https://github.com/HCMID/EditorsRepo.jl.git
Tree: 403ecef26abd46afcc1433d6bb5e7643c623f688

Registrator tree SHA: 7c16227cd1dc9bae38e25d6dc6f9c020f8ebca46

--- a/E/EditorsRepo/Versions.toml
+++ b/E/EditorsRepo/Versions.toml
@@ -42,3 +42,6 @@ git-tree-sha1 = "321a6e2737bdea89a2bddd607055eadf3053df76"
 
 ["0.6.5"]
 git-tree-sha1 = "d285b32a353d45d29eea227a4c57c7c922b6e347"
+
+["0.6.6"]
+git-tree-sha1 = "403ecef26abd46afcc1433d6bb5e7643c623f688"
