New version: EditorsRepo v0.6.7
UUID: 3fa2051c-bcb6-4d65-8a68-41ff86d56437
Repo: https://github.com/HCMID/EditorsRepo.jl.git
Tree: 4049ceba22887bddc6434e42954e519cd850181d

Registrator tree SHA: 7c16227cd1dc9bae38e25d6dc6f9c020f8ebca46

--- a/E/EditorsRepo/Compat.toml
+++ b/E/EditorsRepo/Compat.toml
@@ -33,5 +33,8 @@ EditionBuilders = "0.1"
 ["0.6.5-0"]
 CitableTeiReaders = "0.4"
 
-["0.6.6-0"]
+["0.6.6"]
 EditionBuilders = "0.2"
+
+["0.6.7-0"]
+EditionBuilders = "0.2.1-0.2"
