--- a/E/EditorsRepo/Versions.toml
+++ b/E/EditorsRepo/Versions.toml
@@ -45,3 +45,6 @@ git-tree-sha1 = "d285b32a353d45d29eea227a4c57c7c922b6e347"
 
 ["0.6.6"]
 git-tree-sha1 = "403ecef26abd46afcc1433d6bb5e7643c623f688"
+
+["0.6.7"]
+git-tree-sha1 = "4049ceba22887bddc6434e42954e519cd850181d"
