New version: EditionBuilders v0.2.2
UUID: 2fb66cca-c1f8-4a32-85dd-1a01a9e8cd8f
Repo: https://github.com/HCMID/EditionBuilders.jl.git
Tree: a8d380498aa88b54475f662b1604e0fbe3ca54fd

Registrator tree SHA: 7c16227cd1dc9bae38e25d6dc6f9c020f8ebca46

--- a/E/EditionBuilders/Versions.toml
+++ b/E/EditionBuilders/Versions.toml
@@ -6,3 +6,6 @@ git-tree-sha1 = "494bafa6b71c68ecb46f1aecb0b6f0460c9a7b22"
 
 ["0.2.1"]
 git-tree-sha1 = "40fbc3bcb326684c64521a4796ce80cef13ba563"
+
+["0.2.2"]
+git-tree-sha1 = "a8d380498aa88b54475f662b1604e0fbe3ca54fd"
