New version: InteractiveChaos v0.12.2
UUID: 81850811-659e-51ab-a7c2-5dd848ff4aa4
Repo: https://github.com/JuliaDynamics/InteractiveChaos.jl.git
Tree: b85a1154755d3d9d898517d03aa55e14b90c0a50

Registrator tree SHA: 7c16227cd1dc9bae38e25d6dc6f9c020f8ebca46

--- a/I/InteractiveChaos/Versions.toml
+++ b/I/InteractiveChaos/Versions.toml
@@ -81,3 +81,6 @@ git-tree-sha1 = "31b4d5b933b5d334815cf38bcb7eb9fdfca57f7c"
 
 ["0.12.1"]
 git-tree-sha1 = "11b8fd0dd57b7d804a19978a33ff7212c3af74c5"
+
+["0.12.2"]
+git-tree-sha1 = "b85a1154755d3d9d898517d03aa55e14b90c0a50"
