New version: EditorsRepo v0.6.8
UUID: 3fa2051c-bcb6-4d65-8a68-41ff86d56437
Repo: https://github.com/HCMID/EditorsRepo.jl.git
Tree: 7757237bb723d2a4c38826146cc8e859ad4f04d9

Registrator tree SHA: 7c16227cd1dc9bae38e25d6dc6f9c020f8ebca46

--- a/E/EditorsRepo/Compat.toml
+++ b/E/EditorsRepo/Compat.toml
@@ -36,5 +36,8 @@ CitableTeiReaders = "0.4"
 ["0.6.6"]
 EditionBuilders = "0.2"
 
-["0.6.7-0"]
+["0.6.7"]
 EditionBuilders = "0.2.1-0.2"
+
+["0.6.8-0"]
+EditionBuilders = "0.2.2-0.2"
