--- a/E/EditorsRepo/Versions.toml
+++ b/E/EditorsRepo/Versions.toml
@@ -48,3 +48,6 @@ git-tree-sha1 = "403ecef26abd46afcc1433d6bb5e7643c623f688"
 
 ["0.6.7"]
 git-tree-sha1 = "4049ceba22887bddc6434e42954e519cd850181d"
+
+["0.6.8"]
+git-tree-sha1 = "7757237bb723d2a4c38826146cc8e859ad4f04d9"
