--- a/Registry.toml
+++ b/Registry.toml
@@ -1378,6 +1378,7 @@ some amount of consideration when choosing package names.
 4456351a-5be3-4067-ade9-541926a41e04 = { name = "SimpleTensorNetworks", path = "S/SimpleTensorNetworks" }
 4484d908-372d-4f90-b90b-0ec97f005b8c = { name = "AndExport", path = "A/AndExport" }
 4491297b-8966-5840-8cb9-b189d60f3398 = { name = "RealNeuralNetworks", path = "R/RealNeuralNetworks" }
+44994717-8eef-47f3-a7e0-6b313e1778f0 = { name = "EnlilGrids", path = "E/EnlilGrids" }
 44b605c4-b955-5f2b-9b6d-d2bd01d3d205 = { name = "CRC", path = "C/CRC" }
 44c1da8e-ad92-11ea-0c62-8351ccf0aad4 = { name = "CIAOAlgorithms", path = "C/CIAOAlgorithms" }
 44cc8b2a-fe03-5802-9b90-2102cf0b4e7e = { name = "SuiteSparseGraphBLAS_jll", path = "S/SuiteSparseGraphBLAS_jll" }
