New version: InteractiveChaos v0.12.3
UUID: 81850811-659e-51ab-a7c2-5dd848ff4aa4
Repo: https://github.com/JuliaDynamics/InteractiveChaos.jl.git
Tree: ea8e0ce9307456e7b9b591d2e540d8fb58657d34

Registrator tree SHA: 7c16227cd1dc9bae38e25d6dc6f9c020f8ebca46

--- a/I/InteractiveChaos/Versions.toml
+++ b/I/InteractiveChaos/Versions.toml
@@ -84,3 +84,6 @@ git-tree-sha1 = "11b8fd0dd57b7d804a19978a33ff7212c3af74c5"
 
 ["0.12.2"]
 git-tree-sha1 = "b85a1154755d3d9d898517d03aa55e14b90c0a50"
+
+["0.12.3"]
+git-tree-sha1 = "ea8e0ce9307456e7b9b591d2e540d8fb58657d34"
