--- a/S/SpelledOut/Versions.toml
+++ b/S/SpelledOut/Versions.toml
@@ -15,3 +15,6 @@ git-tree-sha1 = "97e4deb0f3d5739e74fd99febee0feb7384cbcb2"
 
 ["1.0.3"]
 git-tree-sha1 = "3f7e1bfd53727f35d67af2958776d9e1490ff187"
+
+["1.1.3"]
+git-tree-sha1 = "cb1e0266b0904b4040e83b027d4132b8a5d8e2b7"
