New version: ConstraintDomains v0.1.3
UUID: 5800fd60-8556-4464-8d61-84ebf7a0bedb
Repo: https://github.com/JuliaConstraints/ConstraintDomains.jl.git
Tree: 50383bca7064994040b9c301228ff31e3cea3f91

Registrator tree SHA: 7c16227cd1dc9bae38e25d6dc6f9c020f8ebca46

--- a/C/ConstraintDomains/Versions.toml
+++ b/C/ConstraintDomains/Versions.toml
@@ -6,3 +6,6 @@ git-tree-sha1 = "71ec2248416a331d8e09d5a9d217a91011b81b2e"
 
 ["0.1.2"]
 git-tree-sha1 = "3c8f7a22fd7ba4e462df315a1724c5d140904a00"
+
+["0.1.3"]
+git-tree-sha1 = "50383bca7064994040b9c301228ff31e3cea3f91"
