--- a/S/StatisticalRethinking/Versions.toml
+++ b/S/StatisticalRethinking/Versions.toml
@@ -147,3 +147,6 @@ git-tree-sha1 = "3e0325ddfc70c9227fe4859613761613ac8e4b54"
 
 ["3.2.0"]
 git-tree-sha1 = "1cb2ad68d372a2a50b0118c4fd164167686a6a08"
+
+["3.2.1"]
+git-tree-sha1 = "951e0e0a72dad59a354c6e4a9cf5141ddb843eb3"
