New version: Agents v4.0.1
UUID: 46ada45e-f475-11e8-01d0-f70cc89e6671
Repo: https://github.com/JuliaDynamics/Agents.jl.git
Tree: 3f92f44a7cea93b758da662707d59d670193ba3f

Registrator tree SHA: 7c16227cd1dc9bae38e25d6dc6f9c020f8ebca46

--- a/A/Agents/Versions.toml
+++ b/A/Agents/Versions.toml
@@ -90,3 +90,6 @@ git-tree-sha1 = "5b42dd6e028c19a0e8d5ac8ec30a5a070e93651f"
 
 ["4.0.0"]
 git-tree-sha1 = "f0ba8d3133444af79d6daa0c4709c0b26e8ea5ff"
+
+["4.0.1"]
+git-tree-sha1 = "3f92f44a7cea93b758da662707d59d670193ba3f"
