New version: Orthography v0.4.0
UUID: 0b4c9448-09b0-4e78-95ea-3eb3328be36d
Repo: https://github.com/HCMID/Orthography.jl.git
Tree: f49252c53b2b5e28ee02d96a41c6ca7cf7abd51e

Registrator tree SHA: 7c16227cd1dc9bae38e25d6dc6f9c020f8ebca46

--- a/O/Orthography/Versions.toml
+++ b/O/Orthography/Versions.toml
@@ -6,3 +6,6 @@ git-tree-sha1 = "92a6ca1365d6aca465c589d33f75184e14103c0c"
 
 ["0.3.0"]
 git-tree-sha1 = "7c6cefb29aebaacc662fe24ae93ab1cc57181c20"
+
+["0.4.0"]
+git-tree-sha1 = "f49252c53b2b5e28ee02d96a41c6ca7cf7abd51e"
