--- a/O/Orthography/Versions.toml
+++ b/O/Orthography/Versions.toml
@@ -9,3 +9,6 @@ git-tree-sha1 = "7c6cefb29aebaacc662fe24ae93ab1cc57181c20"
 
 ["0.4.0"]
 git-tree-sha1 = "f49252c53b2b5e28ee02d96a41c6ca7cf7abd51e"
+
+["0.4.1"]
+git-tree-sha1 = "53ae798c10043b4a990d1557a594388b0e07a57a"
