--- a/M/MLJModelInterface/Versions.toml
+++ b/M/MLJModelInterface/Versions.toml
@@ -78,3 +78,4 @@ git-tree-sha1 = "dc9af7178bdbe2619623be56fc127fe8b0d30c78"
 
 ["0.3.9"]
 git-tree-sha1 = "e8d3e322f08a1d1fa2307c3c8a6746c76074bffe"
+yanked = true
