--- a/M/MLJScientificTypes/Versions.toml
+++ b/M/MLJScientificTypes/Versions.toml
@@ -62,3 +62,4 @@ git-tree-sha1 = "7645b846d971015573c8af6d6531adb5239f3c71"
 
 ["0.4.4"]
 git-tree-sha1 = "609b46aca0f1932ab8653464e4194f185f05a864"
+yanked = true
