--- a/C/Constraints/Versions.toml
+++ b/C/Constraints/Versions.toml
@@ -21,3 +21,6 @@ git-tree-sha1 = "4e45b3a6c4c6973c8676c0d4be1530356954d8de"
 
 ["0.1.7"]
 git-tree-sha1 = "13747bcb9324855bf387e6d6c730c91746ef7106"
+
+["0.1.8"]
+git-tree-sha1 = "88055dcc1ec717f1ac9697b60423edbfc2c5208e"
