New version: CompositionalNetworks v0.1.5
UUID: 4b67e4b5-442d-4ef5-b760-3f5df3a57537
Repo: https://github.com/JuliaConstraints/CompositionalNetworks.jl.git
Tree: 190787ddea12cb90c3992171c512943f23d3e771

Registrator tree SHA: 7c16227cd1dc9bae38e25d6dc6f9c020f8ebca46

--- a/C/CompositionalNetworks/Versions.toml
+++ b/C/CompositionalNetworks/Versions.toml
@@ -21,3 +21,6 @@ git-tree-sha1 = "bbf66e8f5992b9071da0fc7d6b2f2e8f8d08f32f"
 
 ["0.1.4"]
 git-tree-sha1 = "4eb590b507a0730ea24cd3b1a7369030743da74b"
+
+["0.1.5"]
+git-tree-sha1 = "190787ddea12cb90c3992171c512943f23d3e771"
