New version: LocalSearchSolvers v0.1.9
UUID: 2b10edaa-728d-4283-ac71-07e312d6ccf3
Repo: https://github.com/JuliaConstraints/LocalSearchSolvers.jl.git
Tree: 9432f923f07121f93b5f87ec572ff0ec86b55cbc

Registrator tree SHA: 7c16227cd1dc9bae38e25d6dc6f9c020f8ebca46

--- a/L/LocalSearchSolvers/Versions.toml
+++ b/L/LocalSearchSolvers/Versions.toml
@@ -24,3 +24,6 @@ git-tree-sha1 = "41cfa445bd974f499f2ae33ac73f4a0aa972711f"
 
 ["0.1.8"]
 git-tree-sha1 = "cc11ba2d19e2bfd08407b969d94ca1d7973af9b8"
+
+["0.1.9"]
+git-tree-sha1 = "9432f923f07121f93b5f87ec572ff0ec86b55cbc"
