--- a/Registry.toml
+++ b/Registry.toml
@@ -3988,6 +3988,7 @@ cb13b1c6-351e-5134-b3ad-d6a530956a82 = { name = "Waveforms", path = "W/Waveforms
 cb18667b-f199-4b8b-b886-9916fef47a26 = { name = "PICDataStructures", path = "P/PICDataStructures" }
 cb1a753d-6b7b-52e3-9bfe-57d99d445c39 = { name = "AsterReader", path = "A/AsterReader" }
 cb401d7d-c4f9-4284-af24-a1eca280e8e8 = { name = "VersatileHDPMixtureModels", path = "V/VersatileHDPMixtureModels" }
+cb40c8c0-6f69-4117-9a87-8a763eccf627 = { name = "PolyhedralOmega", path = "P/PolyhedralOmega" }
 cb52cc87-d0c7-5933-bad1-08679d8b4c67 = { name = "DifferentialDynamicsModels", path = "D/DifferentialDynamicsModels" }
 cb69de98-8f9f-5947-b504-cdcc19a34020 = { name = "MzXML", path = "M/MzXML" }
 cb8c808f-1acf-59a3-9d2b-6e38d009f683 = { name = "MeshArrays", path = "M/MeshArrays" }
