--- a/Registry.toml
+++ b/Registry.toml
@@ -3482,6 +3482,7 @@ b1ad91c1-539c-4ace-90bd-ea06abc420fa = { name = "PersistenceDiagramsBase", path 
 b1af39ce-6e51-5722-b548-1afc01310642 = { name = "Markovify", path = "M/Markovify" }
 b1babd66-454c-5c15-86a3-b3c308963df9 = { name = "JetPackDSP", path = "J/JetPackDSP" }
 b1bec4e5-fd48-53fe-b0cb-9723c09d164b = { name = "LIBSVM", path = "L/LIBSVM" }
+b1c52339-7909-45ad-8b6a-6e388f7c67f2 = { name = "CombinatorialSpaces", path = "C/CombinatorialSpaces" }
 b1c65800-dbf0-11e8-0001-4d87e1e07e69 = { name = "ModifiedHankelFunctionsOfOrderOneThird", path = "M/ModifiedHankelFunctionsOfOrderOneThird" }
 b1c9364c-c21d-5dc1-9093-c544b07b6c73 = { name = "TrackedDistributions", path = "T/TrackedDistributions" }
 b1dc47e8-ebfd-568c-9de9-431a7ef94af6 = { name = "SentinelMissings", path = "S/SentinelMissings" }
