New version: SpelledOut v1.1.1
UUID: 4728c690-e668-4265-bc0d-51a8c0f93067
Repo: https://github.com/jakewilliami/SpelledOut.jl.git
Tree: ba105bcca095ec9494d1fcb2e2071a77ac42b11a

Registrator tree SHA: 7c16227cd1dc9bae38e25d6dc6f9c020f8ebca46

--- a/S/SpelledOut/Versions.toml
+++ b/S/SpelledOut/Versions.toml
@@ -18,3 +18,6 @@ git-tree-sha1 = "3f7e1bfd53727f35d67af2958776d9e1490ff187"
 
 ["1.1.0"]
 git-tree-sha1 = "ec6691d1e06d59d7bd848feb759a8fbd82b83467"
+
+["1.1.1"]
+git-tree-sha1 = "ba105bcca095ec9494d1fcb2e2071a77ac42b11a"
