--- a/Registry.toml
+++ b/Registry.toml
@@ -609,6 +609,7 @@ some amount of consideration when choosing package names.
 1c8ee90f-4401-5389-894e-7a04a3dc0f4d = { name = "IterableTables", path = "I/IterableTables" }
 1ca51c6a-1b4d-4546-9ae1-53e0a243ab12 = { name = "GAMS", path = "G/GAMS" }
 1cb3b9ac-1ffd-5777-9e6b-a3d42300664d = { name = "IndexableBitVectors", path = "I/IndexableBitVectors" }
+1cbe449d-ba56-45e5-b823-2aefb7650dd9 = { name = "ParameterSpace", path = "P/ParameterSpace" }
 1cc33cce-174c-413c-94d0-34de58e4bd4a = { name = "GadJet", path = "G/GadJet" }
 1cd36ffe-cb05-4761-9ff9-f7bc1999e190 = { name = "AAindex", path = "A/AAindex" }
 1cead3c2-87b3-11e9-0ccd-23c62b72b94e = { name = "Manifolds", path = "M/Manifolds" }
