--- a/Registry.toml
+++ b/Registry.toml
@@ -483,6 +483,7 @@ some amount of consideration when choosing package names.
 1724a1d5-ab78-548d-94b3-135c294f96cf = { name = "LittleEndianBase128", path = "L/LittleEndianBase128" }
 172a5912-0be3-5bce-b68a-ea4f60b69b05 = { name = "SOM", path = "S/SOM" }
 172afb32-8f1c-513b-968f-184fcd77af72 = { name = "libinchi_jll", path = "L/libinchi_jll" }
+17465d16-6817-4422-9411-20f48b8a7c9d = { name = "reach_me", path = "R/reach_me" }
 17511681-8477-586a-8d98-4cfd5a1f2ec3 = { name = "ERFA", path = "E/ERFA" }
 176e4ad4-9107-502a-977c-53a5728fe704 = { name = "MDDatasets", path = "M/MDDatasets" }
 1785f50a-c9a2-51c8-aad6-0dd19114bd56 = { name = "ReinforcementLearningEnvironmentDiscrete", path = "R/ReinforcementLearningEnvironmentDiscrete" }
