--- a/C/CameraCalibrations/Versions.toml
+++ b/C/CameraCalibrations/Versions.toml
@@ -6,3 +6,6 @@ git-tree-sha1 = "3c657a064ce6719a18d94a79ef27b62df4a05c73"
 
 ["0.2.1"]
 git-tree-sha1 = "f18966968234498c22647f579893bb5661eb0143"
+
+["0.2.2"]
+git-tree-sha1 = "87edef6ca27b274185e40f96933c3318a40b96b1"
