--- a/S/SymbolicUtils/Versions.toml
+++ b/S/SymbolicUtils/Versions.toml
@@ -84,3 +84,6 @@ git-tree-sha1 = "b93fe72f97b60226fd7dfb240782471adbfbf479"
 
 ["0.7.7"]
 git-tree-sha1 = "d8774753e3a131e835bb26ff5eb5da91beaaa78b"
+
+["0.7.8"]
+git-tree-sha1 = "ced377c92d92f0524872de787bb3800f381d7962"
