--- a/V/Vlasiator/Versions.toml
+++ b/V/Vlasiator/Versions.toml
@@ -3,3 +3,6 @@ git-tree-sha1 = "62a8d7813f24fa384d884356c803b30dff658c51"
 
 ["0.1.1"]
 git-tree-sha1 = "6e1bb354c610524448bb294de6459689166c36f2"
+
+["0.1.2"]
+git-tree-sha1 = "26c385a4c5e62012d05acd5e1180c29f02e103ac"
