New version: SimpleTweaks v0.2.3
UUID: 379a6b09-926d-464b-b907-221504e1dab7
Repo: https://github.com/owinter92/SimpleTweaks.jl.git
Tree: b7e25e74289292f8c1ac327cfc789dc014b292b9

Registrator tree SHA: 7c16227cd1dc9bae38e25d6dc6f9c020f8ebca46

--- a/S/SimpleTweaks/Versions.toml
+++ b/S/SimpleTweaks/Versions.toml
@@ -1,2 +1,5 @@
 ["0.2.0"]
 git-tree-sha1 = "fa4f110d1377258c024206f75054444df1fec591"
+
+["0.2.3"]
+git-tree-sha1 = "b7e25e74289292f8c1ac327cfc789dc014b292b9"
