--- a/S/SimpleTweaks/Versions.toml
+++ b/S/SimpleTweaks/Versions.toml
@@ -1,2 +1,5 @@
 ["0.2.0"]
 git-tree-sha1 = "fa4f110d1377258c024206f75054444df1fec591"
+
+["0.3.0"]
+git-tree-sha1 = "204d3570ed5c70d6e1b1d8406a81337df2de3f62"
