New version: SimpleTweaks v0.3.1
UUID: 379a6b09-926d-464b-b907-221504e1dab7
Repo: https://github.com/owinter92/SimpleTweaks.jl.git
Tree: e7f7f2a7a3a293f103ddb731c49c14b205cec1a8

Registrator tree SHA: 7c16227cd1dc9bae38e25d6dc6f9c020f8ebca46

--- a/S/SimpleTweaks/Versions.toml
+++ b/S/SimpleTweaks/Versions.toml
@@ -3,3 +3,6 @@ git-tree-sha1 = "fa4f110d1377258c024206f75054444df1fec591"
 
 ["0.3.0"]
 git-tree-sha1 = "204d3570ed5c70d6e1b1d8406a81337df2de3f62"
+
+["0.3.1"]
+git-tree-sha1 = "e7f7f2a7a3a293f103ddb731c49c14b205cec1a8"
