New version: FluxTraining v0.1.2
UUID: 7bf95e4d-ca32-48da-9824-f0dc5310474f
Repo: https://github.com/lorenzoh/FluxTraining.jl.git
Tree: 688858901e106cbc5135518566ca24a9b5aadf08

Registrator tree SHA: 7c16227cd1dc9bae38e25d6dc6f9c020f8ebca46

--- a/F/FluxTraining/Versions.toml
+++ b/F/FluxTraining/Versions.toml
@@ -3,3 +3,6 @@ git-tree-sha1 = "3003dae92dab8c63236db9353538e9d4c07eff09"
 
 ["0.1.1"]
 git-tree-sha1 = "dab1385afcd07ce8baecf549a299e174f8ff9957"
+
+["0.1.2"]
+git-tree-sha1 = "688858901e106cbc5135518566ca24a9b5aadf08"
