--- a/F/FluxTraining/Compat.toml
+++ b/F/FluxTraining/Compat.toml
@@ -1,7 +1,6 @@
 [0]
 Animations = "0.4"
 BSON = "0.2"
-Flux = "0.11"
 Glob = "1.3.0-1"
 LightGraphs = "1.3.0-1"
 OnlineStats = "1.5.0-1"
@@ -15,8 +14,17 @@ julia = "1"
 DataStructures = "0.17"
 Zygote = "0.5"
 
+["0-0.1.1"]
+Flux = "0.11"
+
+["0.1.1"]
+PrettyTables = "0.10"
+
 ["0.1.1-0"]
 DataStructures = "0.18"
 ImageCore = "0.8"
-PrettyTables = "0.10"
 Zygote = "0.6"
+
+["0.1.2-0"]
+Flux = "0.11-0.12"
+PrettyTables = "0.10-0.11"
