--- a/S/SimpleTweaks/Versions.toml
+++ b/S/SimpleTweaks/Versions.toml
@@ -6,3 +6,6 @@ git-tree-sha1 = "204d3570ed5c70d6e1b1d8406a81337df2de3f62"
 
 ["0.3.1"]
 git-tree-sha1 = "e7f7f2a7a3a293f103ddb731c49c14b205cec1a8"
+
+["0.4.0"]
+git-tree-sha1 = "3f25d1d4cabf39ad8bac06bd62c06bb1232404fb"
