--- a/V/Vlasiator/Versions.toml
+++ b/V/Vlasiator/Versions.toml
@@ -6,3 +6,6 @@ git-tree-sha1 = "6e1bb354c610524448bb294de6459689166c36f2"
 
 ["0.1.2"]
 git-tree-sha1 = "26c385a4c5e62012d05acd5e1180c29f02e103ac"
+
+["0.1.3"]
+git-tree-sha1 = "9a44e1290645ffbeb3dcd14aacf4a97f2065e45d"
