--- a/Registry.toml
+++ b/Registry.toml
@@ -985,6 +985,7 @@ some amount of consideration when choosing package names.
 30c3b604-477b-4a1f-9f80-c60d6f60ac5b = { name = "PooksoftAssetModelingKit", path = "P/PooksoftAssetModelingKit" }
 30cb0354-2223-46a9-baa0-41bdcfbe0178 = { name = "SciMLTutorials", path = "S/SciMLTutorials" }
 30cdaa97-48ad-4abc-9688-3a7175b8083d = { name = "SystemBenchmark", path = "S/SystemBenchmark" }
+30cfb417-a18a-4984-907c-c461bfb07c95 = { name = "GridDensities", path = "G/GridDensities" }
 30d33687-f7ed-5b0d-8b26-3dc9b7abd572 = { name = "MCVI", path = "M/MCVI" }
 30ddb3f0-912f-4f34-9804-e4bb31290777 = { name = "StippleCharts", path = "S/StippleCharts" }
 30e472fa-2b12-4c0b-9705-07d174b7a4e1 = { name = "PubChemCrawler", path = "P/PubChemCrawler" }
