--- a/Registry.toml
+++ b/Registry.toml
@@ -404,6 +404,7 @@ some amount of consideration when choosing package names.
 13533e5b-e1c2-4e57-8cef-cac5e52f6474 = { name = "BibParser", path = "B/BibParser" }
 135379e1-83be-5ae7-9e8e-29dade3dc6c7 = { name = "StratiGraphics", path = "S/StratiGraphics" }
 13650a8a-fc62-4efe-b79a-7f834fdd9eb5 = { name = "NicePipes", path = "N/NicePipes" }
+1366662e-918a-4969-8935-7dd8903d6446 = { name = "FactorLoadingMatrices", path = "F/FactorLoadingMatrices" }
 136a8f8c-c49b-4edb-8b98-f3d64d48be8f = { name = "ValueShapes", path = "V/ValueShapes" }
 137488db-d2e6-4fb9-97f3-1e40a263e83c = { name = "Bcrypt", path = "B/Bcrypt" }
 1375f997-1772-542d-b6fa-a8ee39124556 = { name = "CompEcon", path = "C/CompEcon" }
