New version: NaiveBayes v0.5.0
UUID: 9bbee03b-0db5-5f46-924f-b5c9c21b8c60
Repo: https://github.com/dfdx/NaiveBayes.jl.git
Tree: 966323a075ea1f432d1331ecdfe97727bfc1c86a

Registrator tree SHA: 7c16227cd1dc9bae38e25d6dc6f9c020f8ebca46

--- a/N/NaiveBayes/Versions.toml
+++ b/N/NaiveBayes/Versions.toml
@@ -6,3 +6,6 @@ git-tree-sha1 = "bb947ac9346f39272926cfe270dda68421960fb9"
 
 ["0.4.2"]
 git-tree-sha1 = "1253413fab0c656cdf927dfa8a755662ebd15905"
+
+["0.5.0"]
+git-tree-sha1 = "966323a075ea1f432d1331ecdfe97727bfc1c86a"
