--- a/N/NaiveBayes/Compat.toml
+++ b/N/NaiveBayes/Compat.toml
@@ -1,4 +1,4 @@
-[0]
+["0-0.4"]
 julia = "1"
 
 ["0-0.4.0"]
@@ -9,8 +9,15 @@ KernelDensity = "0.0.0 - 0.6"
 StatsBase = "0.0.0 - 0.33"
 
 ["0.4.1-0"]
-Distributions = "0.23.12-0.23"
-HDF5 = "0.12.5-0.12"
 Interpolations = "0.12.10-0.12"
 KernelDensity = "0.6"
 StatsBase = "0.33.1-0.33"
+
+["0.4.1-0.4"]
+Distributions = "0.23.12-0.23"
+HDF5 = "0.12.5-0.12"
+
+["0.5-0"]
+Distributions = "0.23.12-0.24"
+HDF5 = "0.14-0.15"
+julia = "1.3.0-1"
