--- a/M/MLJNaiveBayesInterface/Compat.toml
+++ b/M/MLJNaiveBayesInterface/Compat.toml
@@ -1,9 +1,14 @@
-[0]
-MLJModelInterface = "0.3.5-0.3"
-julia = "1"
-
 ["0-0.1.0"]
 NaiveBayes = "0.4"
 
-["0.1.1-0"]
+["0-0.1.1"]
+MLJModelInterface = "0.3.5-0.3"
+julia = "1"
+
+["0.1.1"]
 NaiveBayes = "0.4.2-0.4"
+
+["0.1.2-0"]
+MLJModelInterface = "0.3.5-0.4"
+NaiveBayes = "0.5"
+julia = "1.3.0-1"
