New version: EditorsRepo v0.6.9
UUID: 3fa2051c-bcb6-4d65-8a68-41ff86d56437
Repo: https://github.com/HCMID/EditorsRepo.jl.git
Tree: a0f32b5e2a9646ef1d5fb995e0e74c64aeb15ae5

Registrator tree SHA: 7c16227cd1dc9bae38e25d6dc6f9c020f8ebca46

--- a/E/EditorsRepo/Compat.toml
+++ b/E/EditorsRepo/Compat.toml
@@ -24,11 +24,11 @@ CitableText = "0.4"
 ["0.3.2-0"]
 CitablePhysicalText = "0.2"
 
-["0.5-0"]
-Orthography = "0.3"
-
 ["0.5-0.6.5"]
 EditionBuilders = "0.1"
+
+["0.5-0.6.8"]
+Orthography = "0.3"
 
 ["0.6.5-0"]
 CitableTeiReaders = "0.4"
@@ -41,3 +41,6 @@ EditionBuilders = "0.2.1-0.2"
 
 ["0.6.8-0"]
 EditionBuilders = "0.2.2-0.2"
+
+["0.6.9-0"]
+Orthography = "0.4.1-0.4"
