--- a/E/EditorsRepo/Versions.toml
+++ b/E/EditorsRepo/Versions.toml
@@ -51,3 +51,6 @@ git-tree-sha1 = "4049ceba22887bddc6434e42954e519cd850181d"
 
 ["0.6.8"]
 git-tree-sha1 = "7757237bb723d2a4c38826146cc8e859ad4f04d9"
+
+["0.6.9"]
+git-tree-sha1 = "a0f32b5e2a9646ef1d5fb995e0e74c64aeb15ae5"
