--- a/V/Vlasiator/Versions.toml
+++ b/V/Vlasiator/Versions.toml
@@ -9,3 +9,6 @@ git-tree-sha1 = "26c385a4c5e62012d05acd5e1180c29f02e103ac"
 
 ["0.1.3"]
 git-tree-sha1 = "9a44e1290645ffbeb3dcd14aacf4a97f2065e45d"
+
+["0.1.4"]
+git-tree-sha1 = "4f08a0cb56926bd5304db87fb46863df0d172174"
