New version: EditorsRepo v0.6.10
UUID: 3fa2051c-bcb6-4d65-8a68-41ff86d56437
Repo: https://github.com/HCMID/EditorsRepo.jl.git
Tree: b2d66a36921b0d5934697fef61d4d959d545c1b6

Registrator tree SHA: 7c16227cd1dc9bae38e25d6dc6f9c020f8ebca46

--- a/E/EditorsRepo/Deps.toml
+++ b/E/EditorsRepo/Deps.toml
@@ -15,3 +15,6 @@ CitablePhysicalText = "e38a874e-a7c2-4ff3-8dea-81ae2e5c9b07"
 ["0.5-0"]
 EditionBuilders = "2fb66cca-c1f8-4a32-85dd-1a01a9e8cd8f"
 Orthography = "0b4c9448-09b0-4e78-95ea-3eb3328be36d"
+
+["0.6.10-0"]
+Lycian = "7c215dd3-d1b4-4517-b6c6-0123f1059a20"
