--- a/E/EditorsRepo/Compat.toml
+++ b/E/EditorsRepo/Compat.toml
@@ -30,6 +30,9 @@ EditionBuilders = "0.1"
 ["0.5-0.6.8"]
 Orthography = "0.3"
 
+["0.6.10-0"]
+Lycian = "0.1"
+
 ["0.6.5-0"]
 CitableTeiReaders = "0.4"
 
