--- a/E/EditorsRepo/Versions.toml
+++ b/E/EditorsRepo/Versions.toml
@@ -54,3 +54,6 @@ git-tree-sha1 = "7757237bb723d2a4c38826146cc8e859ad4f04d9"
 
 ["0.6.9"]
 git-tree-sha1 = "a0f32b5e2a9646ef1d5fb995e0e74c64aeb15ae5"
+
+["0.6.10"]
+git-tree-sha1 = "b2d66a36921b0d5934697fef61d4d959d545c1b6"
