New version: Lycian v0.1.1
UUID: 7c215dd3-d1b4-4517-b6c6-0123f1059a20
Repo: https://github.com/neelsmith/Lycian.jl.git
Tree: 8dd3b8ace9924b24ef9bb4b843f2dbe25ce93229

Registrator tree SHA: 7c16227cd1dc9bae38e25d6dc6f9c020f8ebca46

--- a/L/Lycian/Versions.toml
+++ b/L/Lycian/Versions.toml
@@ -1,2 +1,5 @@
 ["0.1.0"]
 git-tree-sha1 = "ea30eb708245735fbb67c0b792661e1cbd833200"
+
+["0.1.1"]
+git-tree-sha1 = "8dd3b8ace9924b24ef9bb4b843f2dbe25ce93229"
