New version: Entropies v0.11.1
UUID: ed8fcbec-b94c-44b6-89df-898894ad9591
Repo: https://github.com/JuliaDynamics/Entropies.jl.git
Tree: 2b2c973b4ed80ebc242107d9af3add58cd995e78

Registrator tree SHA: 7c16227cd1dc9bae38e25d6dc6f9c020f8ebca46

--- a/E/Entropies/Versions.toml
+++ b/E/Entropies/Versions.toml
@@ -54,3 +54,6 @@ git-tree-sha1 = "48e209b971d5f25ad224105476b0f5224d615124"
 
 ["0.11.0"]
 git-tree-sha1 = "b2fe17a012321a091bbe7da4f772aee068f35991"
+
+["0.11.1"]
+git-tree-sha1 = "2b2c973b4ed80ebc242107d9af3add58cd995e78"
