--- a/Registry.toml
+++ b/Registry.toml
@@ -2008,6 +2008,7 @@ some amount of consideration when choosing package names.
 647866c9-e3ac-4575-94e7-e3d426903924 = { name = "PolygonOps", path = "P/PolygonOps" }
 6484683b-de53-5689-b9d2-2f18b83297fe = { name = "DrakeLCMTypes", path = "D/DrakeLCMTypes" }
 64bff920-2084-43da-a3e6-9bb72801c0c9 = { name = "StatisticalTraits", path = "S/StatisticalTraits" }
+64da2586-aace-4fe5-8bb6-ed2bd1e3d45d = { name = "XVGReader", path = "X/XVGReader" }
 64db5801-a3ae-51a7-b7d2-a0a5f0813e47 = { name = "Deldir", path = "D/Deldir" }
 64e55fb5-fece-45e4-9f07-6b725a6cb483 = { name = "ForTheBadge", path = "F/ForTheBadge" }
 64e8d737-0d98-5a82-81e1-7af1483a77cc = { name = "tree_sitter_ruby_jll", path = "T/tree_sitter_ruby_jll" }
