--- a/S/StanModels/Versions.toml
+++ b/S/StanModels/Versions.toml
@@ -57,3 +57,6 @@ git-tree-sha1 = "c5493b295cf0421e7ae51ed7636226fbd8e3ff2d"
 
 ["2.1.3"]
 git-tree-sha1 = "de6692470b81dcd84fe33fb0ff9ead9c0ba2b229"
+
+["2.1.4"]
+git-tree-sha1 = "bf39b393ac8a28c18239b7a0932bc0cad119f86c"
