New version: Catlab v0.11.0
UUID: 134e5e36-593f-5add-ad60-77f754baafbe
Repo: https://github.com/AlgebraicJulia/Catlab.jl.git
Tree: b03b9db6a8aaac1181e2f0422f977d68b64fd79b

Registrator tree SHA: 7c16227cd1dc9bae38e25d6dc6f9c020f8ebca46

--- a/C/Catlab/Versions.toml
+++ b/C/Catlab/Versions.toml
@@ -84,3 +84,6 @@ git-tree-sha1 = "c7a97d7b93994bdb43de1bb1cd40a008e3b8e189"
 
 ["0.10.2"]
 git-tree-sha1 = "c255795d0ac86f518febacc2da043b9ab6e4dee7"
+
+["0.11.0"]
+git-tree-sha1 = "b03b9db6a8aaac1181e2f0422f977d68b64fd79b"
