--- a/Registry.toml
+++ b/Registry.toml
@@ -630,6 +630,7 @@ some amount of consideration when choosing package names.
 1d781980-c74a-44d0-9ec2-b658ff5df7eb = { name = "DiBitVectors", path = "D/DiBitVectors" }
 1d978283-2c37-5f34-9a8e-e9c0ece82495 = { name = "TensorFlow", path = "T/TensorFlow" }
 1d9c40fe-1d26-11ea-03f8-f5801c7a1696 = { name = "QuantumTomography", path = "Q/QuantumTomography" }
+1da23141-447d-474e-a064-8dd6bac2aab2 = { name = "FeatureEng", path = "F/FeatureEng" }
 1da6f4ae-116c-4c38-8ee9-19974ff3601d = { name = "Telegram", path = "T/Telegram" }
 1db0cb78-5717-11e9-0361-01e0964942ce = { name = "SurfaceTopology", path = "S/SurfaceTopology" }
 1dc0ca97-c5ce-4e77-ac6d-c576ac9d7f27 = { name = "ArrayTools", path = "A/ArrayTools" }
