--- a/C/Compose/Versions.toml
+++ b/C/Compose/Versions.toml
@@ -30,3 +30,6 @@ git-tree-sha1 = "157b75f64c26f36b55b5456dff08e524e591ec8d"
 
 ["0.9.1"]
 git-tree-sha1 = "a2b4df8e2dc688f2d63b5cfcc00c773218fa9e7f"
+
+["0.9.2"]
+git-tree-sha1 = "c6461fc7c35a4bb8d00905df7adafcff1fe3a6bc"
