New version: SymbolicUtils v0.8.0
UUID: d1185830-fcd6-423d-90d6-eec64667417b
Repo: https://github.com/JuliaSymbolics/SymbolicUtils.jl.git
Tree: 0124ec2d1e64d93a3cac0c76666d67b9da5ee21b

Registrator tree SHA: 7c16227cd1dc9bae38e25d6dc6f9c020f8ebca46

--- a/S/SymbolicUtils/Deps.toml
+++ b/S/SymbolicUtils/Deps.toml
@@ -7,3 +7,9 @@ TimerOutputs = "a759f4b9-e2f1-59dc-863e-4aeb61b1ea8f"
 ["0.3.4-0"]
 AbstractAlgebra = "c3fe647b-3220-5bb0-a1ea-a7954cac585d"
 DataStructures = "864edb3b-99cc-5e75-8d2d-829cb0a9cfe8"
+
+["0.8-0"]
+IfElse = "615f187c-cbe4-4ef1-ba3b-2fcf58d6d173"
+LabelledArrays = "2ee39098-c373-598a-b85f-a56591580800"
+SparseArrays = "2f01184e-e22b-5df5-ae63-d93ebab69eaf"
+StaticArrays = "90137ffa-7385-5640-81b9-e52037218182"
