--- a/S/SymbolicUtils/Versions.toml
+++ b/S/SymbolicUtils/Versions.toml
@@ -87,3 +87,6 @@ git-tree-sha1 = "d8774753e3a131e835bb26ff5eb5da91beaaa78b"
 
 ["0.7.8"]
 git-tree-sha1 = "ced377c92d92f0524872de787bb3800f381d7962"
+
+["0.8.0"]
+git-tree-sha1 = "0124ec2d1e64d93a3cac0c76666d67b9da5ee21b"
