--- a/S/SymbolicUtils/Compat.toml
+++ b/S/SymbolicUtils/Compat.toml
@@ -33,3 +33,8 @@ SpecialFunctions = ["0.10", "1"]
 
 ["0.6.3-0"]
 AbstractAlgebra = "0.9-0.12"
+
+["0.8-0"]
+IfElse = "0.1"
+LabelledArrays = "1.5.0-1"
+StaticArrays = "1"
