--- a/Registry.toml
+++ b/Registry.toml
@@ -3013,6 +3013,7 @@ some amount of consideration when choosing package names.
 98dea707-09b6-5a61-a46f-43b0fb0fb92b = { name = "vOptSpecific", path = "V/vOptSpecific" }
 98e33af6-2ee5-5afd-9e75-cbc738b767c4 = { name = "SimpleDirectMediaLayer", path = "S/SimpleDirectMediaLayer" }
 98e50ef6-434e-11e9-1051-2b60c6c9e899 = { name = "JuliaFormatter", path = "J/JuliaFormatter" }
+98f080ec-61e2-11eb-1c7b-31ea1097256f = { name = "ParetoSmoothedImportanceSampling", path = "P/ParetoSmoothedImportanceSampling" }
 98f94333-fa9f-48a9-ad80-1c66397b2b38 = { name = "Tensorial", path = "T/Tensorial" }
 9919d111-45a3-4056-8d55-3f6c887b9b09 = { name = "IDSGraphs", path = "I/IDSGraphs" }
 9920abf5-d2d3-40c3-98dc-d6c533a1aad6 = { name = "BumpFuncs", path = "B/BumpFuncs" }
