New version: CorrDCA v0.1.2
UUID: 71fba74b-94bb-4624-adc3-6f657ac12af8
Repo: https://github.com/pagnani/CorrDCA.git
Tree: 0ac6fbf4d0f9435e8df90716d46a5017e91a1111

Registrator tree SHA: 7c16227cd1dc9bae38e25d6dc6f9c020f8ebca46

--- a/C/CorrDCA/Versions.toml
+++ b/C/CorrDCA/Versions.toml
@@ -3,3 +3,6 @@ git-tree-sha1 = "bdc0ae3a64995357d6049662a239bbeb0a0673ae"
 
 ["0.1.1"]
 git-tree-sha1 = "d4e26983948d03f44c02c0c9a293c241c4c0611b"
+
+["0.1.2"]
+git-tree-sha1 = "0ac6fbf4d0f9435e8df90716d46a5017e91a1111"
