--- a/S/StanBase/Versions.toml
+++ b/S/StanBase/Versions.toml
@@ -99,3 +99,6 @@ git-tree-sha1 = "32d1f8f9fdadf56784ec46d660701d6e89e027e2"
 
 ["2.2.3"]
 git-tree-sha1 = "aad80d31e56d3d853b177a8ba28ecffccea299bc"
+
+["2.2.4"]
+git-tree-sha1 = "377069c615b6e3b8207a8cd19c724e7d627cccfb"
