New version: StanOptimize v2.2.2
UUID: fbd8da12-e93d-5a64-9231-612a0707ab99
Repo: https://github.com/StanJulia/StanOptimize.jl.git
Tree: 5d544925ab4618b4540c492b74d58fb993264315

Registrator tree SHA: 7c16227cd1dc9bae38e25d6dc6f9c020f8ebca46

--- a/S/StanOptimize/Versions.toml
+++ b/S/StanOptimize/Versions.toml
@@ -63,3 +63,6 @@ git-tree-sha1 = "903179ed6c4f0d35c86f47baaf1f4868ced8d916"
 
 ["2.2.1"]
 git-tree-sha1 = "e872cc0ea52cf1a4efc636ffb5d3d73a03a81766"
+
+["2.2.2"]
+git-tree-sha1 = "5d544925ab4618b4540c492b74d58fb993264315"
