--- a/S/StanDiagnose/Versions.toml
+++ b/S/StanDiagnose/Versions.toml
@@ -60,3 +60,6 @@ git-tree-sha1 = "38940e27cd89622b2e031193f442810ce7c60ebf"
 
 ["2.2.1"]
 git-tree-sha1 = "f31c105ddc0c48aae734dcc0a2a59cfcdeddc920"
+
+["2.2.2"]
+git-tree-sha1 = "9de0f217fdb8a8c5ef29debcd6fb5f5d5e59337b"
