--- a/S/StanVariational/Versions.toml
+++ b/S/StanVariational/Versions.toml
@@ -66,3 +66,6 @@ git-tree-sha1 = "215bcd9bf012451665177262b18afa434f5806f2"
 
 ["2.2.1"]
 git-tree-sha1 = "f40cd80723ed1221490e780e62c18a26c1aa1fee"
+
+["2.2.2"]
+git-tree-sha1 = "932390125ab18108695ead123db952fa99969d9a"
