--- a/S/Stan/Versions.toml
+++ b/S/Stan/Versions.toml
@@ -84,3 +84,6 @@ git-tree-sha1 = "563cb06dcd030d3dd2c853978dbf378cbd84479d"
 
 ["6.3.1"]
 git-tree-sha1 = "9713bfb0c3fd79135fdd376a70c6b28245b834f8"
+
+["6.3.2"]
+git-tree-sha1 = "dc42facb0d8d0be46519d279749d3ba6199521bd"
