--- a/C/CmdStan/Versions.toml
+++ b/C/CmdStan/Versions.toml
@@ -138,3 +138,6 @@ git-tree-sha1 = "2a7ad7d3d1435dec4ba90c997f00ff536ad5fb6a"
 
 ["6.1.6"]
 git-tree-sha1 = "3516feba288c902ef33255a70ec3f8999f026eec"
+
+["6.1.7"]
+git-tree-sha1 = "3cbe0d3b428f4126fb92f400ab5ed386493f504c"
