--- a/S/StanSample/Compat.toml
+++ b/S/StanSample/Compat.toml
@@ -127,9 +127,14 @@ DataFrames = "0.20-0.22"
 ["2.2.5-3"]
 CSV = "0.8"
 DataFrames = "0.22"
-MonteCarloMeasurements = "0.9"
 Reexport = ["0.2", "1"]
 StanBase = "2"
 
+["2.2.5-3.0.5"]
+MonteCarloMeasurements = "0.9"
+
 [3]
 OrderedCollections = "1.3.0-1"
+
+["3.0.6-3"]
+MonteCarloMeasurements = "0.9-0.10"
