--- a/Registry.toml
+++ b/Registry.toml
@@ -2596,6 +2596,7 @@ some amount of consideration when choosing package names.
 81d43f40-5267-43b7-ae1c-8b967f377efa = { name = "Noise", path = "N/Noise" }
 81def892-9a0e-5fdd-b105-ffc91e053289 = { name = "VersionParsing", path = "V/VersionParsing" }
 81dfefd7-55b0-40c6-a251-db853704e186 = { name = "Float8s", path = "F/Float8s" }
+81ebe36b-92a1-4b50-bd7a-fa963d2933c8 = { name = "FluxExtra", path = "F/FluxExtra" }
 81ede08e-ab29-11e9-16d3-79edd30a1d76 = { name = "NaiveGAflux", path = "N/NaiveGAflux" }
 81fc84e3-e8a8-47e5-b99c-4287f7e3a083 = { name = "BliContractor", path = "B/BliContractor" }
 820cb745-3461-5c14-98e1-21b61faceff9 = { name = "bsdiff_jll", path = "B/bsdiff_jll" }
