New version: CitableTeiReaders v0.4.1
UUID: b4325aa9-906c-402e-9c3f-19ab8a88308e
Repo: https://github.com/HCMID/CitableTeiReaders.jl.git
Tree: 7e084a8ff68e12d96cc6bdd226e6f3fcf9135297

Registrator tree SHA: 7c16227cd1dc9bae38e25d6dc6f9c020f8ebca46

--- a/C/CitableTeiReaders/Versions.toml
+++ b/C/CitableTeiReaders/Versions.toml
@@ -12,3 +12,6 @@ git-tree-sha1 = "190d395615cac8d309d2b41fd61f3e415b939fee"
 
 ["0.4.0"]
 git-tree-sha1 = "c1138d1cd28a1192519be6bfb5eb7bdfaafeb132"
+
+["0.4.1"]
+git-tree-sha1 = "7e084a8ff68e12d96cc6bdd226e6f3fcf9135297"
