New version: Vlasiator v0.1.5
UUID: 7d2ba682-ad6e-4e20-80d9-3f2d4a610bb4
Repo: https://github.com/henry2004y/Vlasiator.jl.git
Tree: 4589ae620ea67461d64dd72f59f11eb1fe9adea1

Registrator tree SHA: 7c16227cd1dc9bae38e25d6dc6f9c020f8ebca46

--- a/V/Vlasiator/Versions.toml
+++ b/V/Vlasiator/Versions.toml
@@ -12,3 +12,6 @@ git-tree-sha1 = "9a44e1290645ffbeb3dcd14aacf4a97f2065e45d"
 
 ["0.1.4"]
 git-tree-sha1 = "4f08a0cb56926bd5304db87fb46863df0d172174"
+
+["0.1.5"]
+git-tree-sha1 = "4589ae620ea67461d64dd72f59f11eb1fe9adea1"
