--- a/Registry.toml
+++ b/Registry.toml
@@ -4648,6 +4648,7 @@ ec8451be-7e33-11e9-00cf-bbf324bd1392 = { name = "KernelFunctions", path = "K/Ker
 ec84b674-ba8e-5d96-8ba1-2a689ba10484 = { name = "Xorg_libXrandr_jll", path = "X/Xorg_libXrandr_jll" }
 ecb7cac2-dae3-4a6f-a5f6-8274be99c6cb = { name = "GithubMarkdown", path = "G/GithubMarkdown" }
 ecbce9bc-3e5e-569d-9e29-55181f61f8d0 = { name = "BenchmarkProfiles", path = "B/BenchmarkProfiles" }
+ecdfd59a-7c14-409c-ab7a-3704f8e92dd6 = { name = "FastFloat16s", path = "F/FastFloat16s" }
 ecf26e93-935c-5e64-9b21-bc8ac81b4723 = { name = "ClassicalCiphers", path = "C/ClassicalCiphers" }
 ed01d8cd-4d21-5b2a-85b4-cc3bdc58bad4 = { name = "Sobol", path = "S/Sobol" }
 ed0789fa-10db-50b3-94da-03266d70be0f = { name = "qwt_jll", path = "Q/qwt_jll" }
