New version: ConstraintDomains v0.1.4
UUID: 5800fd60-8556-4464-8d61-84ebf7a0bedb
Repo: https://github.com/JuliaConstraints/ConstraintDomains.jl.git
Tree: 6bab8531e11e80fbe5bb48525424c8066016ba93

Registrator tree SHA: 7c16227cd1dc9bae38e25d6dc6f9c020f8ebca46

--- a/C/ConstraintDomains/Versions.toml
+++ b/C/ConstraintDomains/Versions.toml
@@ -9,3 +9,6 @@ git-tree-sha1 = "3c8f7a22fd7ba4e462df315a1724c5d140904a00"
 
 ["0.1.3"]
 git-tree-sha1 = "50383bca7064994040b9c301228ff31e3cea3f91"
+
+["0.1.4"]
+git-tree-sha1 = "6bab8531e11e80fbe5bb48525424c8066016ba93"
