New package: Greek v0.1.0
UUID: 72b824a7-2b4a-40fa-944c-ac4f345dc63a
Repo: https://github.com/neelsmith/Greek.jl.git
Tree: a68b29f1b9fae67df3ff88fd4c8a393e3d4e7675

Registrator tree SHA: 7c16227cd1dc9bae38e25d6dc6f9c020f8ebca46

--- a/Registry.toml
+++ b/Registry.toml
@@ -2308,6 +2308,7 @@ some amount of consideration when choosing package names.
 728860ae-c896-11e8-0b91-0f38ecad5046 = { name = "RHEOS", path = "R/RHEOS" }
 728887dd-28ad-4880-9c43-8461f4f025ea = { name = "ZonalFlow", path = "Z/ZonalFlow" }
 72aeabae-b714-56e8-bb55-1d7ed6f48f02 = { name = "Qemu_jll", path = "Q/Qemu_jll" }
+72b824a7-2b4a-40fa-944c-ac4f345dc63a = { name = "Greek", path = "G/Greek" }
 72ce6e51-3f7f-5ebd-8e88-b86aa3e31c30 = { name = "MCMCBenchmarks", path = "M/MCMCBenchmarks" }
 72d370af-b0e4-5787-9b36-2e8c6f54fb93 = { name = "Clang_assert_jll", path = "C/Clang_assert_jll" }
 72e9ff3b-fbb7-4ec3-b65d-9c3416869820 = { name = "MixedAnova", path = "M/MixedAnova" }
