--- a/C/CollisionDetection/Versions.toml
+++ b/C/CollisionDetection/Versions.toml
@@ -6,3 +6,6 @@ git-tree-sha1 = "af986ea015fbdfe200588c04998468ec04b49cfb"
 
 ["0.1.2"]
 git-tree-sha1 = "52b0f2f704204177efada5475796eee529386ee5"
+
+["0.1.3"]
+git-tree-sha1 = "8edb46db045228884ac57fc4a0d45ce3ce1ec399"
