--- a/C/ClusterTrees/Versions.toml
+++ b/C/ClusterTrees/Versions.toml
@@ -3,3 +3,6 @@ git-tree-sha1 = "191211442c7b6835dc1917847c7bf692867fec64"
 
 ["0.2.0"]
 git-tree-sha1 = "8207efa72f6e4e131cd1b8875a98664553feca86"
+
+["0.2.1"]
+git-tree-sha1 = "4114d60c95974edf9272d88571d14abeed598942"
