New version: EditionBuilders v0.2.3
UUID: 2fb66cca-c1f8-4a32-85dd-1a01a9e8cd8f
Repo: https://github.com/HCMID/EditionBuilders.jl.git
Tree: 51983eaa34c4d8ce3ce21118141e3514b491257a

Registrator tree SHA: 7c16227cd1dc9bae38e25d6dc6f9c020f8ebca46

--- a/E/EditionBuilders/Versions.toml
+++ b/E/EditionBuilders/Versions.toml
@@ -9,3 +9,6 @@ git-tree-sha1 = "40fbc3bcb326684c64521a4796ce80cef13ba563"
 
 ["0.2.2"]
 git-tree-sha1 = "a8d380498aa88b54475f662b1604e0fbe3ca54fd"
+
+["0.2.3"]
+git-tree-sha1 = "51983eaa34c4d8ce3ce21118141e3514b491257a"
